# flask_blog

./: .bashrc_windsurf  .env  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES_v0.3.0.md  app.py  bandit-report.json  blog-preview.html  check_env_hosting.py  config.py  cookies.txt  coverage.json  pyproject.toml  pytest-clean.ini  pytest.ini  requirements.txt  run.py  schema.sql  webhook_handler.py  wsgi.py  ~$README.md
.cursor/: README.md
.cursor/rules/: 00-global.mdc  01-operations.mdc  flask.mdc  patterns.mdc  pep8.mdc  programming-principles.mdc  python.mdc  zen-python.mdc
.github/workflows/: ci.yml  python-app.yml  sync-dev-to-main.yml
.windsurf/: extensions.json  launch.json  settings.json  tasks.json
.windsurf/rules/: clean_architecture_rules.md  design_patterns_rules.md  flask_3.md  git_enterprise_rules.md  pep8_guide.md  programming_principles.md  python_versions_changes.md  venv_rules.md  zen_python.md
app/: __init__.py  auth.py  cli.py  config.py  db.py  main.py  schema.sql
app/auth/: __init__.py  routes.py  utils.py
app/constants/: roles.py
app/db/: __init__.py  db.py  models.py  schema.sql
app/forms/: __init__.py  article_forms.py  auth.py  auth_forms.py  base.py  comment.py  comment_form.py  csrf.py  fields.py  post.py  validators.py
app/main/: __init__.py  routes.py
app/migrations/: 000_create_migrations.sql  001_create_users.sql  002_create_roles.sql  003_create_user_roles.sql  004_create_posts.sql  005_create_comments.sql  006_create_login_attempts.sql  add_updated_at_coloumn_to_articles_table_migration.sql  add_updated_at_column_to_articles_table_migration.sql  add_updated_at_column_to_comments_table_migration.sql  migration_cli.py  migration_runner.py  schema.sql
app/models/: __init__.py  article.py  comment.py  comments.py  post.py  posts.py  user.py  users.py
app/repositories/: __init__.py  comment_repo.py  post_repo.py  user_repo.py
app/routes/: article_routes.py  auth_routes.py  comment_routes.py  сomment_routes.py
app/services/: __init__.py  comment_service.py  csrf_service.py  jwt_service.py  login_attempt_service.py  post_service.py  role_service.py  user_auth_service.py
app/static/css/: blog-layout.css  comments.css  style.css  styles.css
app/static/js/: auth-cookies.js  login-discriminator-update.js  navbar.js  theme-toggle.js  theme.js
app/templates/: base.html  index.html
app/templates/articles/: form.html  list.html  view.html
app/templates/auth/: login.html  register.html  select_account.html
app/templates/blog/: create_post.html  index.html  post_detail.html
app/templates/comments/: _comment.html  _form.html  section.html
app/templates/errors/: 404.html  500.html
app/templates/main/: create_post.html  edit_post.html  index.html  view_post.html
app/tests/: __init__.py  conftest.py
app/tests/unit/auth/: test_routes.py
app/views/: __init__.py  auth.py  blog.py
docs/: ARCHITECTURE.md  BlogPlatformDevelopmentPlan.md  DATABASE.md  DEVELOPMENT.md  FRONTEND.md  INDEX.md  LAYERS.md  PRE_COMMIT.md  SECURITY.md  database-migrations-tz.md  flask-3.0-documentation.md  flask-blog-plan.md  github-actions-setup.md  jwt-service-tz.md
docs/logs_55347750027/: 0_Notification.txt  1_Code Quality Checks.txt
docs/logs_55347750027/Code Quality Checks/: 18_Post Checkout repository.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout repository.txt  3_Set up Python 3.13.txt  4_Install dependencies.txt  5_Lint with flake8.txt  6_Check code formatting with black.txt  9_Upload security report.txt  system.txt
docs/logs_55347750027/Notification/: 1_Set up job.txt  3_Notify on failure.txt  4_Complete job.txt  system.txt
logs/: flask_blog.log.1  flask_blog.log.2
tests/: README.md  __init__.py  base.py  conftest.py  test_auth.py  test_basic.py  test_comment_counts.py  test_comments.py  test_database.py  test_discriminator.py  test_forms.py  test_integration.py  test_main.py  test_posts.py  test_security.py  test_typing.py  test_validation_stubs.py
