[project]
name = "flask_blog"
version = "0.3.0"
description = "Flask Blog Application"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1.0",
    "Flask-SQLAlchemy>=3.1.0",
    "Flask-Migrate>=4.0.0",
    "Flask-Login>=0.6.0",
    "Flask-WTF>=1.2.0",
    "WTForms>=3.1.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

prod = [
    "gunicorn>=23.0.0",
]

[project.scripts]
flask-blog = "wsgi:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
