[project]
name = "flask_blog"
version = "0.3.0"
description = "Flask Blog Application"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1.0",
    "Flask-SQLAlchemy>=3.1.0",
    "Flask-Migrate>=4.0.0",
    "Flask-Login>=0.6.0",
    "Flask-WTF>=1.2.0",
    "WTForms>=3.1.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

prod = [
    "gunicorn>=23.0.0",
]

[project.scripts]
flask-blog = "wsgi:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "database: marks tests as database tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]
