[project]
name = "flask_blog"
version = "0.3.0"
description = "Flask Blog Application"
requires-python = ">=3.13"
dependencies = [
    "Flask>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

prod = [
    "gunicorn>=23.0.0",
]

[project.scripts]
flask-blog = "wsgi:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "database: marks tests as database tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]

[tool.black]
line-length = 88
target-version = ['py313']
skip-string-normalization = false
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
strict_optional = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
color_output = true
error_summary = true
exclude = [
    '\.venv',
    '\.git',
    '__pycache__',
    'build',
    'dist',
    '.*\.egg-info',
]

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "werkzeug.*",
    "click.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "\\.git",
    "\\.venv",
    "__pycache__",
    "build",
    "dist",
    ".*\\.egg-info",
    "tests",
    "migrations",
    "node_modules",
]
skips = ["B101"]  # Пропускаем assert_used в тестах
severity = "medium"
confidence = "medium"
max_lines = 500
